# TverskyAttention

./: .gitignore  README.md  main.py  pyproject.toml
data/processed/: val_tokens.pt
notebooks/: 00_baseline.ipynb  01_xor.ipynb  02_dropin_attention.ipynb  02_dropin_train.ipynb
src/: enums.py
src/arhitecture/: __init__.py  attention_dropin.py  gpt.py  projection.py  similarity.py
src/datasets/: __init__.py  text_dataset.py  wikitext2.py
thesis/: paper.md  НИ_Черновик_ВКР.docx
thesis/resources/: architecture.puml
